revert change